--- a/index.html
+++ b/index.html
@@ -1,28 +1,31 @@
 <!doctype html>
 <html>
 <head lang="en">
+
 	<meta charset="utf-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=no">
-	
-	<title>MUNTER - Free Bootstrap 3 One Page Theme</title> 
-	<meta name="description" content="BlackTie.co - Free Handsome Bootstrap Themes" />	    
-	<meta name="keywords" content="themes, bootstrap, free, templates, bootstrap 3, freebie,">
-	<meta property="og:title" content="">
 
+	<!-- INFORMATIONS -->
+	<title>iSC Inc. Festival</title> 
+	<meta name="description" content="A iSC Inc. event for everybody." />	    
+	<meta name="keywords" content="isc inc, events, festival">
+	<meta property="og:title" content="iSC Inc. Festival">
+
+	<!-- STYLESHEETS -->
 	<link rel="stylesheet" type="text/css" href="css/bootstrap.min.css">
 	<link rel="stylesheet" href="fancybox/jquery.fancybox-v=2.1.5.css" type="text/css" media="screen">
-    <link rel="stylesheet" href="css/font-awesome.min.css" rel="stylesheet">
-	
+    	<link rel="stylesheet" href="css/font-awesome.min.css" rel="stylesheet">
 	<link rel="stylesheet" type="text/css" href="css/style.css">	
-	
-	<link href='http://fonts.googleapis.com/css?family=Titillium+Web:400,600,300,200&subset=latin,latin-ext' rel='stylesheet' type='text/css'>
-	
-	
-	<link rel="prefetch" href="images/zoom.png">
-		
-</head>
 
+	<!-- FONTS -->
+	<link href='http://fonts.googleapis.com/css?family=Titillium+Web:400,600,300,200&subset=latin,latin-ext' rel='stylesheet' type='text/css'>
+
+	<!-- IMAGES -->
+	<link rel="prefetch" href="images/zoom.png">
+
+</head>
 <body>
+
 	<div class="navbar navbar-fixed-top" data-activeslide="1">
 		<div class="container">
 		
@@ -246,7 +249,7 @@
 			</div><!-- /row -->
 		</div><!-- /container -->
 	</div><!-- /Slide 6 -->
-	
+
 </body>
 
 	<!-- SCRIPTS -->
@@ -277,3 +280,4 @@
 	</script>
 
 </html>
+<!-- Build the <> with <3 by the iSC Inc. team. :-D -->
