--- a/index.html
+++ b/index.html
@@ -69,7 +69,7 @@
 			<div id="home-row-1" class="row clearfix">
 				<div class="col-12">
 					<h1 class="font-semibold">iSC Inc. <span class="font-thin">FESTIVAL</span></h1>
-					<h4 class="font-thin">A public iSC Inc. event <span class="font-semibold"> for everybody</span>.</h4>
+					<h4 class="font-thin">A public iSC Inc. event <span class="font-semibold"> for everybody</span>!</h4>
 					<br>
 					<br>
 				</div><!-- /col-12 -->
@@ -92,7 +92,7 @@
 				<div class="hr">&nbsp;</div>
 			</div><!-- /row -->
 			<div class="row subtitle-row">
-				<div class="col-12 font-thin">This is what <span class="font-semibold">we do best</span></div>
+				<div class="col-12 font-thin">This is what <span class="font-semibold">we do best:</span></div>
 			</div><!-- /row -->
 			<div class="row content-row">
 				<div class="col-12 col-lg-3 col-sm-6">
@@ -113,7 +113,7 @@
 				<div class="col-12 col-lg-3 col-sm-6">
 					<p><i class="icon icon-pencil"></i></p>
 					<h2 class="font-semibold">Development</h2>
-					<h4 class="font-thin">Developing and programming all kinds of softwares for iSC Inc.</h4>
+					<h4 class="font-thin">Programming all kinds of softwares for iSC Inc.</h4>
 				</div><!-- /col12 -->
 			</div><!-- /row -->
 		</div><!-- /container -->
@@ -156,7 +156,7 @@
 				<div class="col-12 col-sm-2">
 					<p><i class="icon icon-bolt"></i></p>
 					<h2 class="font-thin">Listen to<br><span class="font-semibold" >your needs</span></h2>
-					<h4 class="font-thin">Think about exactly what the iSC Inc. community needs most.</h4>
+					<h4 class="font-thin">Think about exactly what the big, collaborative iSC Inc. community needs most.</h4>
 				</div><!-- /col12 -->
 				<div class="col-12 col-sm-2">
 					<p><i class="icon icon-cog"></i></p>
@@ -219,6 +219,7 @@
 				<div class="col-12 col-sm-2"><img src="images/client02.png" alt=""></div>
 				<div class="col-12 col-sm-2"><img src="images/client03.png" alt=""></div>
 				<div class="col-12 col-sm-2"><img src="images/client04.png" alt=""></div>
+				<div class="col-12 col-sm-2"><img src="images/client05.png" alt=""></div>
 				<div class="col-1 col-sm-1 hidden-sm">&nbsp;</div>
 			</div><!-- /row -->
 		</div><!-- /container -->
