--- a/index.html
+++ b/index.html
@@ -26,6 +26,17 @@
 </head>
 <body>
 
+<!-- FACEBOOK (JavaScript) SDK -->
+<div id="fb-root"></div>
+<script>(function(d, s, id) {
+  var js, fjs = d.getElementsByTagName(s)[0];
+  if (d.getElementById(id)) return;
+  js = d.createElement(s); js.id = id;
+  js.src = "//connect.facebook.net/de_DE/sdk.js#xfbml=1&version=v2.4&appId=1629422577289002";
+  fjs.parentNode.insertBefore(js, fjs);
+}(document, 'script', 'facebook-jssdk'));</script>
+
+<!-- SITE START -->
 	<div class="navbar navbar-fixed-top" data-activeslide="1">
 		<div class="container">
 		
@@ -263,6 +274,9 @@
 				</div><!-- /col12 -->
 				<div class="col-sm-1 hidden-sm">&nbsp;</div>
 			</div><!-- /row -->
+		
+		<div class="fb-page" data-href="https://www.facebook.com/iSCIncorporated" data-small-header="false" data-adapt-container-width="true" data-hide-cover="false" data-show-facepile="true" data-show-posts="false"><div class="fb-xfbml-parse-ignore"><blockquote cite="https://www.facebook.com/iSCIncorporated"><a href="https://www.facebook.com/iSCIncorporated">ISC Inc.</a></blockquote></div></div>
+		
 		</div><!-- /container -->
 	</div><!-- /Slide 6 -->
 
