--- a/index.html
+++ b/index.html
@@ -11,6 +11,10 @@
 	<meta name="keywords" content="isc inc, events, festival">
 	<meta property="og:title" content="iSC Inc. Festival">
 
+	<!-- LINKS -->
+	<link title="iSC Inc. Festival" rel="alternate" href="https://j.mp/iSCIncFestival">
+	<link title="iSC Inc. Festival" rel="canonical" href="http://iscinc.github.io/festival">
+
 	<!-- STYLESHEETS -->
 	<link rel="stylesheet" type="text/css" href="css/bootstrap.min.css">
 	<link rel="stylesheet" href="fancybox/jquery.fancybox-v=2.1.5.css" type="text/css" media="screen">
