--- a/index.html
+++ b/index.html
@@ -12,8 +12,8 @@
 	<meta property="og:title" content="iSC Inc. Festival">
 
 	<!-- LINKS -->
-	<link title="iSC Inc. Festival" rel="alternate" href="https://j.mp/iSCIncFestival">
-	<link title="iSC Inc. Festival" rel="canonical" href="http://iscinc.github.io/festival">
+	<link title="iSC Inc. Festival" rel="alternate" href="http://iscinc.github.io/festival">
+	<link title="iSC Inc. Festival" rel="canonical" href="https://j.mp/iSCIncFestival">
 
 	<!-- STYLESHEETS -->
 	<link rel="stylesheet" type="text/css" href="css/bootstrap.min.css">
