--- a/index.html
+++ b/index.html
@@ -12,8 +12,9 @@
 	<meta property="og:title" content="iSC Inc. Festival">
 
 	<!-- LINKS -->
-	<link title="iSC Inc. Festival" rel="alternate" href="http://iscinc.github.io/festival">
-	<link title="iSC Inc. Festival" rel="canonical" href="https://j.mp/iSCIncFestival">
+	<link rel="home" href="https://j.mp/iSCIncFestival">
+        <link rel="index" href="https://iscinc.github.io/festival/index.html">
+        <link rel="canonical" href="https://iscinc.github.io/festival">
 
 	<!-- STYLESHEETS -->
 	<link rel="stylesheet" type="text/css" href="css/bootstrap.min.css">
