--- a/index.html
+++ b/index.html
@@ -9,12 +9,15 @@
 	<title>iSC Inc. Festival</title> 
 	<meta name="description" content="A iSC Inc. event for everybody." />
 	<meta name="keywords" content="isc inc, events, festival">
-	<meta property="og:title" content="iSC Inc. Festival">
 
 	<!-- LINKS -->
 	<link rel="home" href="https://j.mp/iSCIncFestival">
         <link rel="index" href="https://iscinc.github.io/festival/index.html">
         <link rel="canonical" href="https://iscinc.github.io/festival">
+
+	<!-- FACEBOOK -->
+	<meta property="og:title" content="iSC Inc. Festival">
+	<meta property="og:url" content="https://j.mp/iSCIncFestival" />
 
 	<!-- STYLESHEETS -->
 	<link rel="stylesheet" type="text/css" href="css/bootstrap.min.css">
