--- a/index.html
+++ b/index.html
@@ -116,7 +116,8 @@ FB.getLoginStatus(function(response) {
 		<div id="arrow-right" class="disabled visible-lg"></div>
 	</div><!-- /.arrows -->
 	
-	
+	<h1 id="fb-welcome"></h1>
+
 	<!-- === MAIN Background === -->
 	<div class="slide story" id="slide-1" data-slide="1">
 		<div class="container">
