--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
 
 	<!-- FACEBOOK -->
 	<meta property="og:title" content="iSC Inc. Festival">
-	<meta property="og:url" content="https://iscinc.github.io/festival" />
+	<meta property="og:url" content="https://iscinc.github.io/festival/" />
 
 	<!-- STYLESHEETS -->
 	<link rel="stylesheet" type="text/css" href="css/bootstrap.min.css">
