--- a/index.html
+++ b/index.html
@@ -18,6 +18,12 @@
 	<!-- FACEBOOK -->
 	<meta property="og:title" content="iSC Inc. Festival">
 	<meta property="og:url" content="https://iscinc.github.io/festival/" />
+        <meta property="og:type" content="website">
+        <meta property="og:locale" content="en_US">
+        <meta property="og:image" content="https://iscinc.github.io/festival/images/s01.png">
+        <meta property="og:description" content="A iSC Inc. event for everybody.">
+        <meta property="og:site_name" content="iSC Inc. Festival">
+        <link rel="opengraph" href="https://graph.facebook.com/1139775486039765">
 
 	<!-- STYLESHEETS -->
 	<link rel="stylesheet" type="text/css" href="css/bootstrap.min.css">
