--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 	<!-- LINKS -->
 	<link rel="home" href="https://j.mp/iSCIncFestival">
         <link rel="index" href="https://iscinc.github.io/festival/index.html">
-        <link rel="canonical" href="https://iscinc.github.io/festival">
+        <link rel="canonical" href="https://iscinc.github.io/festival/">
 
 	<!-- FACEBOOK -->
 	<meta property="og:title" content="iSC Inc. Festival">
