--- a/login/facebook.html
+++ b/login/facebook.html
@@ -4,7 +4,7 @@
   <meta name="viewport" content="width=device-width, minimum-scale=1.0, initial-scale=1.0, user-scalable=yes">
 
   <!-- TITLE -->
-  <titleFacebook Login | iSC Inc. Festival</title>
+  <title>Facebook Login | iSC Inc. Festival</title>
 
 </head>
 <body>
