--- a/policy.html
+++ b/policy.html
@@ -1,6 +1,6 @@
-<link href="/assets/site-290e67d08b21c6a66ff7d7bc40dda50c.css" media="screen" rel="stylesheet" type="text/css"/>
-<script src="/assets/home-c31deb0d156532987f8877719c8c4dd3.js" type="text/javascript"></script>
-<script src="/assets/site-ec209fe1c1554d46297ccaf02d45452c.js" type="text/javascript"></script>
+<link href="https://www.iubenda.com/assets/site-290e67d08b21c6a66ff7d7bc40dda50c.css" media="screen" rel="stylesheet" type="text/css"/>
+<script src="https://www.iubenda.com/assets/home-c31deb0d156532987f8877719c8c4dd3.js" type="text/javascript"></script>
+<script src="https://www.iubenda.com/assets/site-ec209fe1c1554d46297ccaf02d45452c.js" type="text/javascript"></script>
 <script type="text/javascript" src="https://use.typekit.com/frd4nvl.js"></script>
 
 Privacy Policy of the <strong>iSC Inc. Festival</strong> Facebook app</h1>
