--- a/index.html
+++ b/index.html
@@ -340,19 +340,19 @@
 				<div class="col-sm-1 hidden-sm">&nbsp;</div>
 				<div class="col-12 col-sm-2 with-hover-text">
 					<p><a target="_blank" href="tel:+XX XXX-XXXX"><i class="icon icon-phone"></i></a></p>
-					<span class="hover-text font-light ">+XX XXX-XXXX</span></a>
+					<span class="hover-text font-light ">+XX XXX-XXXX</span>
 				</div><!-- /col12 -->
 				<div class="col-12 col-sm-2 with-hover-text">
 					<p><a target="_blank" href="mailto:festival@inc.isc"><i class="icon icon-envelope"></i></a></p>
-					<span class="hover-text font-light ">festival@inc.isc</span></a>
+					<span class="hover-text font-light ">festival@inc.isc</span>
 				</div><!-- /col12 -->
 				<div class="col-12 col-sm-2 with-hover-text">
 					<p><a target="_blank"><i class="icon icon-home"></i></a></p>
-					<span class="hover-text font-light ">San Francisco, California, USA<br>zip code XXXXXX</span></a>
+					<span class="hover-text font-light ">San Francisco, California, USA<br>zip code XXXXXX</span>
 				</div><!-- /col12 -->
 				<div class="col-12 col-sm-2 with-hover-text">
 					<p><a target="_blank" href="https://facebook.com/iSCIncorporated"><i class="icon icon-facebook"></i></a></p>
-					<span class="hover-text font-light ">iSCIncorporated</span></a>
+					<span class="hover-text font-light ">iSCIncorporated</span>
 					<br />
 					<br />
 					<fb:login-button scope="public_profile,email" onlogin="checkLoginState();">
@@ -363,7 +363,7 @@
 				</div><!-- /col12 -->
 				<div class="col-12 col-sm-2 with-hover-text">
 					<p><a target="_blank" href="https://twitter.com/iSCIncorporated"><i class="icon icon-twitter"></i></a></p>
-					<span class="hover-text font-light ">@iSCIncorporated</span></a>
+					<span class="hover-text font-light ">@iSCIncorporated</span>
 				</div><!-- /col12 -->
 				<div class="col-sm-1 hidden-sm">&nbsp;</div>
 			</div><!-- /row -->
