--- a/popups/facebook.html
+++ b/popups/facebook.html
@@ -16,7 +16,7 @@
 
 <p class="right"><a href="JavaScript:window.close()">Close</a></p>
 
-<p class="center"><h1>Follow us on Facebook!</h1></p>
+<h1>Follow us on Facebook!</h1>
 
   <div class="fb-page" data-href="https://www.facebook.com/iSCIncorporated" data-small-header="false" data-adapt-container-width="true" data-hide-cover="false" data-show-facepile="true" data-show-posts="false">
     <div class="fb-xfbml-parse-ignore">
