--- a/popups/facebook.html
+++ b/popups/facebook.html
@@ -18,13 +18,7 @@
 
 <h1>Follow us on Facebook!</h1>
 
-  <div class="fb-page" data-href="https://www.facebook.com/iSCIncorporated" data-small-header="false" data-adapt-container-width="true" data-hide-cover="false" data-show-facepile="true" data-show-posts="false">
-    <div class="fb-xfbml-parse-ignore">
-      <blockquote cite="https://www.facebook.com/iSCIncorporated">
-        <a href="https://www.facebook.com/iSCIncorporated">iSC Inc.</a>
-      </blockquote>
-    </div>
-  </div>
+<div class="fb-page" data-href="https://www.facebook.com/iSCIncorporated" data-small-header="false" data-adapt-container-width="true" data-hide-cover="false" data-show-facepile="true" data-show-posts="false"><div class="fb-xfbml-parse-ignore"><blockquote cite="https://www.facebook.com/iSCIncorporated"><a href="https://www.facebook.com/iSCIncorporated">iSC Inc.</a></blockquote></div></div>
 
 </body>
 </html>
