--- a/popups/facebook.html
+++ b/popups/facebook.html
@@ -14,10 +14,23 @@
 </head>
 <body>
 
+<!-- Facebook JavaScript SDK -->
+<div id="fb-root"></div>
+<script>(function(d, s, id) {
+  var js, fjs = d.getElementsByTagName(s)[0];
+  if (d.getElementById(id)) return;
+  js = d.createElement(s); js.id = id;
+  js.src = "//connect.facebook.net/en_US/sdk.js#xfbml=1&version=v2.4&appId=1629576067299480";
+  fjs.parentNode.insertBefore(js, fjs);
+}(document, 'script', 'facebook-jssdk'));</script>
+
+<!-- Close Button -->
 <p class="right"><a href="JavaScript:window.close()">Close</a></p>
 
+<!-- Header -->
 <h1>Follow us on Facebook!</h1>
 
+<!-- Facebook Page Plugin -->
 <div class="fb-page" data-href="https://www.facebook.com/iSCIncorporated" data-small-header="false" data-adapt-container-width="true" data-hide-cover="false" data-show-facepile="true" data-show-posts="false"><div class="fb-xfbml-parse-ignore"><blockquote cite="https://www.facebook.com/iSCIncorporated"><a href="https://www.facebook.com/iSCIncorporated">iSC Inc.</a></blockquote></div></div>
 
 </body>
