--- a/index.html
+++ b/index.html
@@ -365,6 +365,7 @@
 					<p><a target="_blank" href="https://twitter.com/iSCIncorporated"><i class="icon icon-twitter"></i></a></p>
 					<span class="hover-text font-light ">@iSCIncorporated</span>
 				</div><!-- /col12 -->
+				<div class="col-sm-1 hidden-sm">&nbsp;</div>
 			</div><!-- /row -->
 		</div><!-- /container -->
 	</div><!-- /Slide 6 -->
