--- a/index.html
+++ b/index.html
@@ -112,11 +112,11 @@
   // Here we run a very simple test of the Graph API after login is
   // successful.  See statusChangeCallback() for when this call is made.
   function testAPI() {
-    console.log('Welcome!  Fetching your information.... ');
+    console.log('Welcome!  Fetching your Facebook information.... ');
     FB.api('/me', function(response) {
-      console.log('Successful login for: ' + response.name);
+      console.log('Successful Facebook login for: ' + response.name);
       document.getElementById('status').innerHTML =
-        'Thanks for logging in, ' + response.name + '!';
+        'Thanks you for logging in with Facebook, ' + response.name + '!' + ':-)';
     });
   }
 </script>
