--- a/index.html
+++ b/index.html
@@ -301,7 +301,9 @@
 				<div class="col-12 col-sm-2"><img src="images/client03.png" alt=""></div>
 				<div class="col-12 col-sm-2"><img src="images/client04.png" alt=""></div>
 				<div class="col-12 col-sm-2"><img src="images/client05.png" alt=""></div>
+				<div class="col-1 col-sm-1 hidden-sm">&nbsp;</div>
 				<br />
+				<div class="col-1 col-sm-1 hidden-sm">&nbsp;</div>
 				<div class="col-12 col-sm-2"><img src="images/sponsors/facebook.gif" alt="" height="30"></div>
 				<div class="col-12 col-sm-2"><img src="images/sponsors/Google.png" alt="" height="50"></div>
 				<div class="col-12 col-sm-2"><img src="images/sponsors/UN.svg" alt="" height="60"></div>
