Add / Modify sponsors images

--- a/index.html
+++ b/index.html
@@ -304,10 +304,19 @@
 				<div class="col-1 col-sm-1 hidden-sm">&nbsp;</div>
 				<br />
 				<div class="col-1 col-sm-1 hidden-sm">&nbsp;</div>
-				<div class="col-12 col-sm-2"><img src="images/sponsors/facebook.gif" alt="" height="30"></div>
-				<div class="col-12 col-sm-2"><img src="images/sponsors/Google.png" alt="" height="50"></div>
-				<div class="col-12 col-sm-2"><img src="images/sponsors/UN.svg" alt="" height="60"></div>
-				<div class="col-12 col-sm-2"><img src="images/sponsors/Nintendo.png" alt="" height="50"></div>
+				<div class="col-12 col-sm-2"><img src="images/sponsors/companies/Apple.gif" alt="" height=""></div>
+				<div class="col-12 col-sm-2"><img src="images/sponsors/companies/Coca-Cola.png" alt=""></div>
+				<div class="col-12 col-sm-2"><img src="images/sponsors/companies/GitHub.png" alt=""></div>
+				<div class="col-12 col-sm-2"><img src="images/sponsors/companies/Google.png" alt=""></div>
+				<div class="col-12 col-sm-2"><img src="images/sponsors/companies/LinkedIn.png" alt=""></div>
+				<div class="col-1 col-sm-1 hidden-sm">&nbsp;</div>
+				<br />
+				<div class="col-1 col-sm-1 hidden-sm">&nbsp;</div>
+				<div class="col-12 col-sm-2"><img src="images/sponsors/companies/Microsoft.png" alt=""></div>
+				<div class="col-12 col-sm-2"><img src="images/sponsors/companies/Nintendo.png" alt=""></div>
+				<div class="col-12 col-sm-2"><img src="images/sponsors/companies/UN.svg" alt=""></div>
+				<div class="col-12 col-sm-2"><img src="images/sponsors/companies/WordPress.png" alt=""></div>
+				<div class="col-12 col-sm-2"><img src="images/sponsors/companies/Facebook.gif" alt=""></div>
 				<div class="col-1 col-sm-1 hidden-sm">&nbsp;</div>
 			</div><!-- /row -->
 			<br />
@@ -319,11 +328,9 @@
 			</div><!-- /row -->
 			<div class="row content-row">
 				<div class="col-1 col-sm-1 hidden-sm">&nbsp;</div>
-				<div class="col-12 col-sm-2"><img src="images/client01.png" alt=""></div>
-				<div class="col-12 col-sm-2"><img src="images/client02.png" alt=""></div>
-				<div class="col-12 col-sm-2"><img src="images/client03.png" alt=""></div>
-				<div class="col-12 col-sm-2"><img src="images/client04.png" alt=""></div>
-				<div class="col-12 col-sm-2"><img src="images/client05.png" alt=""></div>
+				<div class="col-12 col-sm-2"><img src="images/media/BBC.png" alt=""></div>
+				<div class="col-12 col-sm-2"><img src="images/media/CNN.png" alt=""></div>
+				<div class="col-12 col-sm-2"><img src="images/media/Forbes.png" alt=""></div>
 				<div class="col-1 col-sm-1 hidden-sm">&nbsp;</div>
 			</div><!-- /row -->
 		</div><!-- /container -->
