--- a/index.html
+++ b/index.html
@@ -312,10 +312,13 @@
 				<div class="col-1 col-sm-1 hidden-sm">&nbsp;</div>
 				<br />
 				<div class="col-1 col-sm-1 hidden-sm">&nbsp;</div>
-				<div class="col-12 col-sm-2"><img src="images/sponsors/companies/Microsoft.png" alt="" height="50"></div>
+				<div class="col-12 col-sm-2"><img src="images/sponsors/companies/Microsoft.png" alt="" height="30"></div>
 				<div class="col-12 col-sm-2"><img src="images/sponsors/companies/Nintendo.png" alt="" height="50"></div>
 				<div class="col-12 col-sm-2"><img src="images/sponsors/companies/UN.svg" alt="" height="60"></div>
 				<div class="col-12 col-sm-2"><img src="images/sponsors/companies/WordPress.png" alt="" height="50"></div>
+				<div class="col-1 col-sm-1 hidden-sm">&nbsp;</div>
+				<br />
+				<div class="col-1 col-sm-1 hidden-sm">&nbsp;</div>
 				<div class="col-12 col-sm-2"><img src="images/sponsors/companies/Facebook.gif" alt="" height="30"></div>
 				<div class="col-1 col-sm-1 hidden-sm">&nbsp;</div>
 			</div><!-- /row -->
