--- a/index.html
+++ b/index.html
@@ -130,24 +130,14 @@
         'Thanks you for logging in with Facebook, ' + response.name + '!' + ' :-)';
     });
   }
+  
+  // Login Button & Requesting Permissions (https://developers.facebook.com/docs/javascript/examples#graphapi)
+    FB.login(function(){}, {scope: 'publish_actions'});
+    FB.login(function(){
+    // Note: The call will only work if you accept the permission request
+    FB.api('/me/feed', 'post', {message: 'Hello, world! I joined to the iSC Inc. Festival community!'});
+    }, {scope: 'publish_actions'});
 </script>
-
-<!-- Login Button & Requesting Permissions (https://developers.facebook.com/docs/javascript/examples#graphapi) -->
-<script>
-// Only works after `FB.init` is called
-function myFacebookLogin() {
-  FB.login(function(){}, {scope: 'publish_actions'});
-}
-
-FB.login(function(){
-  // Note: The call will only work if you accept the permission request
-  FB.api('/me/feed', 'post', {message: 'Hello, world! I joined to the iSC Inc. Festival community!'});
-}, {scope: 'publish_actions'});
-</script>
-
-<div id="myFacebookLogin">
-<button onclick="myFacebookLogin()">Login with Facebook</button>
-</div>
 
 <!-- SITE START -->
 	<div class="navbar navbar-fixed-top" data-activeslide="1">
@@ -397,7 +387,7 @@ FB.login(function(){
 					<span class="hover-text font-light ">iSCIncorporated</span>
 					<br />
 					<br />
-					<fb:login-button scope="public_profile,email" onlogin="checkLoginState();">
+					<fb:login-button scope="public_profile,email,publish_actions" onlogin="checkLoginState();">
 					</fb:login-button>
 
 					<div id="status">
