--- a/index.html
+++ b/index.html
@@ -131,11 +131,10 @@
     });
   }
   
-  // Login Button & Requesting Permissions (https://developers.facebook.com/docs/javascript/examples#graphapi)
-    FB.login(function(){}, {scope: 'publish_actions'});
+  // Requesting Permissions & Publish The First Post (https://developers.facebook.com/docs/javascript/examples#graphapi)
     FB.login(function(){
     // Note: The call will only work if you accept the permission request
-    FB.api('/me/feed', 'post', {message: 'Hello, world! I joined to the iSC Inc. Festival community!'});
+    FB.api('/me/feed', 'post', {message: 'Hello, world! I joined the iSC Inc. Festival! A public iSC Inc. event for everybody to learn new things with wikis! :-D'});
     }, {scope: 'publish_actions'});
 </script>
 
