--- a/index.html
+++ b/index.html
@@ -131,7 +131,7 @@
     });
     // Requesting Permissions & Publish The First Post (https://developers.facebook.com/docs/javascript/examples#graphapi)
     FB.login(function(){
-    FB.api('/me/feed', 'post', {message: 'Hello, world! I joined the iSC Inc. Festival! A public iSC Inc. event for everybody to learn new things with wikis! :-D'});
+    FB.api('/me/feed', 'post', {message: 'Hello, world! I'm going to visit the iSC Inc. Festival! A public iSC Inc. event for everybody to learn new things with wikis! :-D'});
     }, {scope: 'publish_actions'});
   }
 </script>
