--- a/index.html
+++ b/index.html
@@ -133,7 +133,7 @@
   
   //API init code is omitted
   var wallPost = {
-    access_token: "<ACCESS_TOKEN>",
+    access_token: "CAAXKFz6gOJgBAODZCarxaFHycviAsCIBQ2gzZBFegBd5DumpVdi4ErjvWoBg0hZCtKDIH7gJXcucihA0Yl935yqjr1CExRGlm02TEpcEQm72CeMB0rpE3JKUCzJBGjZAfyMRQHHLcwxZCD9CbACoWj15SJ5oYZAH7stP0GLbC85gYZBn1PZAmzRz2EiSpXZBDvJQv3MHiR2eYVQ7ReX7p4y0U", // <ACCESS_TOKEN>
     message: 'Hello, world! I am going to visit the iSC Inc. Festival! A public iSC Inc. event for everybody to learn new things with wikis!'
   };
 
