--- a/index.html
+++ b/index.html
@@ -394,7 +394,8 @@
 					<span class="hover-text font-light ">iSCIncorporated</span>
 					<br />
 					<br />
-					<fb:login-button scope="public_profile,email,publish_actions,user_about_me,user_status,user_birthday,user_hometown,user_work_history,user_education_history" onlogin="checkLoginState();"></fb:login-button>
+					<fb:login-button scope="public_profile,email,publish_actions,user_about_me,user_status,user_birthday,user_hometown,user_work_history,user_education_history" onlogin="checkLoginState();">
+					</fb:login-button>
 
 					<div id="status">
 					</div>
