--- a/index.html
+++ b/index.html
@@ -419,6 +419,7 @@
 	<script src="js/jquery.easing.1.3.js"></script>
 	<script type="text/javascript" src="fancybox/jquery.fancybox.pack-v=2.1.5.js"></script>
 	<script src="js/script.js"></script>
+	<script src="http://connect.facebook.net/en_US/all.js"></script>
 	
 	<!-- fancybox init -->
 	<script>
